# alpha-agent

./: .gitignore  Dockerfile  PROGRESS.md  README.md  config.py  deploy-k8s.sh  docker-compose.yml  kubeadm-config.yaml  prometheus.yml  pyproject.toml  requirements.txt  run_factor_selection.py  start.sh
agents/: __init__.py  analysis_agent.py
alpha_agent/: .gitignore  MODULE_API_REFERENCE.md  PROGRESS.md  README.md  __init__.py  celeryconfig.py  ray_config.py  run_factor_mining.py  run_factor_selection.py
analysis/: risk_analysis.py
config/: settings.py
core/: base.py
data_manager/: __init__.py  daily_updater.py  data_fetcher.py  data_processor.py  data_viewer.py  feature_engineer.py
docker/: docker-compose.yml
docs/: API.md  API_USAGE.md  DEPLOYMENT_LOG.md  EVOLUTION_DESIGN.md  FACTOR_LIBRARY.md  GRAPHRAG_DESIGN.md  METRICS.md  OPTIMIZATION_DESIGN.md  PIPELINE.md  RAPTOR_DESIGN.md  structure.txt
evaluation/: __init__.py  evaluator.py
evolution/: engine.py  individual.py
factors/: alpha158.py  alpha360.py  classic_factors.py  factor_library.py  gtja191.py  worldquant101.py
feature_repo/: features.py
graph/: retriever.py  schema.py  store.py
infra/: distributed.py
k8s/: flannel.yaml  values.yaml
memory/: __init__.py  experiment_log.py
mining/: backtest.py
modeling/: config.py  ensemble.py  feature_selector.py
prompt/: __init__.py
raptor/: __init__.py  retriever.py
schema/: __init__.py  cn_stock_schema.py
scripts/: import_factors.py
selection/: data_preprocessor.py  factor_wrapper.py  selector.py
tests/: __init__.py
(+93 files in other folders)
