[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-agent"
version = "0.7.1"
description = "Alpha Agent - LLM-driven alpha factor mining and selection"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["alpha_agent*"]
